Fixed bug in data processing script

--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@ Temporary commit content 177
 Temporary commit content 178
 Temporary commit content 206
 Temporary commit content 227
+Temporary commit content 237
