Added validation for user input

--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@ Temporary commit content 166
 Temporary commit content 177
 Temporary commit content 178
 Temporary commit content 206
+Temporary commit content 227
