Added initial project plan

--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@ Temporary commit content 238
 Temporary commit content 251
 Temporary commit content 257
 Temporary commit content 267
+Temporary commit content 283
